# happyface

./: .gitignore  README.md  index.html  package-lock.json  package.json
landing/: index.html
scripts/: download-models.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: HappinessGauge.tsx  StatsPanel.tsx  Timeline.tsx  UpgradePrompt.tsx
src/hooks/: useCameraWatcher.ts  useFaceDetection.ts  usePremium.ts
src/utils/: storage.ts  types.ts
