[package]
name = "happyface"
version = "0.1.0"
description = "HappyFace - Your Daily Happiness Tracker"
authors = ["Robert"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-iap = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSDictionary"] }
core-foundation = "0.10"
